@@ -51,6 +51,11 @@
 	LCField *field = [doc field: @"textField2"];
 	UKNotNil(field);
 	UKTrue([field isTermVectorStored]);
+
+#if 0
+assertTrue(field.isStoreOffsetWithTermVector() == true);
+ 	     assertTrue(field.isStorePositionWithTermVector() == true);
+#endif
 	[reader close];
 }
 
