@@ -1,3 +1,8 @@
+2005-10-21 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+    * Source/Index/LCFieldsReader.m:
+    Update to date (not ported yet).
+
 2005-10-12 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
     * Source/Search/LCPrefixQuery.m:
